Bug 1470965 - Fix refcount sanity in nsIPrincipal.addonPolicy getter. r=mixedpuppy, a=lizzard

MozReview-Commit-ID: KuDN3joKi7S